Elaborated an answer
Elaborated an answer for question 5 as requested by reviewer.

--- a/MLND/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/MLND/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -803,7 +803,8 @@
     "collapsed": true
    },
    "source": [
-    "**Answer**: *Election result as outcome variable, Democrat or Republican. Features could be age, sex, occupation, region of voters.*"
+    "**Answer**: *A scenario where supervised learning can be applied,\n",
+    "The result of the presidential election as a whole can be predicted, whether the Republican candidate or the Democratic candidate could win. The end election result, whom to become president as an outcome variable for our machine learning algorithm and the features could be age, sex, occupation, income, state (region) of all individual voters who have voted in the presidential election.*"
    ]
   },
   {
